--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,36 @@
-#people {
+h1 {
+  font-size: 35px;
+}
+
+.data {
   display: flex;
   flex-direction: row;
-  font-size: 30px;
+}
+
+h2 {
+  font-size: 25px;
+}
+
+#people {
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
 }
 
 #films {
   display: flex;
   flex-direction: column;
-  font-size: 30px;
+  font-size: 15px;
 }
 
 #starships {
   display: flex;
   flex-direction: column;
-  font-size: 30px;
+  font-size: 15px;
 }
 
 #vehicles {
   display: flex;
-  flex-direction: row;
-  font-size: 30px;
+  flex-direction: column;
+  font-size: 15px;
 }
