--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
-h1 {
+h2 {
   font-size: 35px;
+  align-self: left;
 }
 
 .data {
@@ -33,4 +34,9 @@ h2 {
   display: flex;
   flex-direction: column;
   font-size: 15px;
+}
+
+form {
+  margin-bottom: 15px;
+  margin-inline-start: 15px;
 }
